tests/ui/associated-type-bounds/duplicate.stderr
error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:6:36
   |
LL | struct SI1<T: Iterator<Item: Copy, Item: Send>> {
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:10:36
   |
LL | struct SI2<T: Iterator<Item: Copy, Item: Copy>> {
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:14:39
   |
LL | struct SI3<T: Iterator<Item: 'static, Item: 'static>> {
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:20:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:27:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:34:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:40:34
   |
LL | enum EI1<T: Iterator<Item: Copy, Item: Send>> {
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:44:34
   |
LL | enum EI2<T: Iterator<Item: Copy, Item: Copy>> {
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:48:37
   |
LL | enum EI3<T: Iterator<Item: 'static, Item: 'static>> {
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:54:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:61:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:68:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:74:35
   |
LL | union UI1<T: Iterator<Item: Copy, Item: Send>> {
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:78:35
   |
LL | union UI2<T: Iterator<Item: Copy, Item: Copy>> {
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:82:38
   |
LL | union UI3<T: Iterator<Item: 'static, Item: 'static>> {
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:88:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:95:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:102:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:108:32
   |
LL | fn FI1<T: Iterator<Item: Copy, Item: Send>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:110:32
   |
LL | fn FI2<T: Iterator<Item: Copy, Item: Copy>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:112:35
   |
LL | fn FI3<T: Iterator<Item: 'static, Item: 'static>>() {}
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:116:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:122:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:128:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:133:42
   |
LL | fn FRPIT1() -> impl Iterator<Item: Copy, Item: Send> {
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:139:42
   |
LL | fn FRPIT2() -> impl Iterator<Item: Copy, Item: Copy> {
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:145:45
   |
LL | fn FRPIT3() -> impl Iterator<Item: 'static, Item: 'static> {
   |                              -------------  ^^^^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:151:40
   |
LL | fn FAPIT1(_: impl Iterator<Item: Copy, Item: Send>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:153:40
   |
LL | fn FAPIT2(_: impl Iterator<Item: Copy, Item: Copy>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:155:43
   |
LL | fn FAPIT3(_: impl Iterator<Item: 'static, Item: 'static>) {}
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:158:35
   |
LL | type TAI1<T: Iterator<Item: Copy, Item: Send>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:160:35
   |
LL | type TAI2<T: Iterator<Item: Copy, Item: Copy>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:162:38
   |
LL | type TAI3<T: Iterator<Item: 'static, Item: 'static>> = T;
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:166:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:171:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:176:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:180:36
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:183:36
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:186:39
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:202:36
   |
LL | trait TRI1<T: Iterator<Item: Copy, Item: Send>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:204:36
   |
LL | trait TRI2<T: Iterator<Item: Copy, Item: Copy>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:206:39
   |
LL | trait TRI3<T: Iterator<Item: 'static, Item: 'static>> {}
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:208:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:208:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:208:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:212:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:212:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:212:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:216:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:216:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:216:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:222:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:228:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:234:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:240:32
   |
LL |     Self: Iterator<Item: Copy, Item: Send>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:240:32
   |
LL |     Self: Iterator<Item: Copy, Item: Send>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:240:32
   |
LL |     Self: Iterator<Item: Copy, Item: Send>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:248:32
   |
LL |     Self: Iterator<Item: Copy, Item: Copy>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:248:32
   |
LL |     Self: Iterator<Item: Copy, Item: Copy>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:248:32
   |
LL |     Self: Iterator<Item: Copy, Item: Copy>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:256:35
   |
LL |     Self: Iterator<Item: 'static, Item: 'static>,
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:256:35
   |
LL |     Self: Iterator<Item: 'static, Item: 'static>,
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:256:35
   |
LL |     Self: Iterator<Item: 'static, Item: 'static>,
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:263:34
   |
LL |     type A: Iterator<Item: Copy, Item: Send>;
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:263:34
   |
LL |     type A: Iterator<Item: Copy, Item: Send>;
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:268:34
   |
LL |     type A: Iterator<Item: Copy, Item: Copy>;
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:268:34
   |
LL |     type A: Iterator<Item: Copy, Item: Copy>;
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:273:37
   |
LL |     type A: Iterator<Item: 'static, Item: 'static>;
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:273:37
   |
LL |     type A: Iterator<Item: 'static, Item: 'static>;
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:133:42
   |
LL | fn FRPIT1() -> impl Iterator<Item: Copy, Item: Send> {
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0282]: type annotations needed
  --> $DIR/duplicate.rs:136:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:139:42
   |
LL | fn FRPIT2() -> impl Iterator<Item: Copy, Item: Copy> {
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0282]: type annotations needed
  --> $DIR/duplicate.rs:142:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:145:45
   |
LL | fn FRPIT3() -> impl Iterator<Item: 'static, Item: 'static> {
   |                              -------------  ^^^^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0282]: type annotations needed
  --> $DIR/duplicate.rs:148:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error: unconstrained opaque type
  --> $DIR/duplicate.rs:180:51
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                                                   ^^^^^^^^^
   |
   = note: `ETAI1` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate.rs:183:51
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                                                   ^^^^^^^^^
   |
   = note: `ETAI2` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate.rs:186:57
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                                                         ^^^^^^^^^
   |
   = note: `ETAI3` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate.rs:189:14
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `ETAI4` must be used in combination with a concrete type within the same crate

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:189:40
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:189:40
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: unconstrained opaque type
  --> $DIR/duplicate.rs:193:14
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `ETAI5` must be used in combination with a concrete type within the same crate

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:193:40
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:193:40
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: unconstrained opaque type
  --> $DIR/duplicate.rs:197:14
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `ETAI6` must be used in combination with a concrete type within the same crate

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:197:43
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:197:43
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 87 previous errors

Some errors have detailed explanations: E0282, E0719.
For more information about an error, try `rustc --explain E0282`.
